# soa-derive

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  tests.yml
0.13.0/: crates.js  help.html  search-index.js  settings.html  source-files.js
0.13.0/implementors/core/clone/: trait.Clone.js
0.13.0/implementors/core/cmp/: trait.PartialEq.js
0.13.0/implementors/core/fmt/: trait.Debug.js
0.13.0/implementors/core/iter/traits/collect/: trait.FromIterator.js  trait.IntoIterator.js
0.13.0/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
0.13.0/implementors/core/ops/drop/: trait.Drop.js
0.13.0/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
0.13.0/implementors/soa_derive/: trait.SoAIndex.js  trait.SoAIndexMut.js  trait.SoAIter.js
0.13.0/soa_derive_example/: all.html  index.html  sidebar-items.js  struct.Particle.html  struct.ParticlePtr.html  struct.ParticlePtrMut.html  struct.ParticleRef.html  struct.ParticleRefMut.html  struct.ParticleSlice.html  struct.ParticleSliceMut.html  struct.ParticleVec.html
0.13.0/src/soa_derive_example/: lib.rs.html
benches/: soa.rs
example/: Cargo.toml  lib.rs
example/tests/: zip.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/iter/traits/collect/: trait.FromIterator.js  trait.IntoIterator.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/soa_derive/: trait.SoAIndex.js  trait.SoAIndexMut.js  trait.StructOfArray.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
latest/: crates.js  help.html  search-index.js  settings.html  src-files.js
latest/search.desc/soa_derive_example/: soa_derive_example-desc-0-.js
latest/soa_derive_example/: all.html  index.html  sidebar-items.js  struct.Particle.html  struct.ParticleIter.html  struct.ParticleIterMut.html  struct.ParticlePtr.html  struct.ParticlePtrMut.html  struct.ParticleRef.html  struct.ParticleRefMut.html  struct.ParticleSlice.html  struct.ParticleSliceMut.html  struct.ParticleVec.html
latest/src/soa_derive_example/: lib.rs.html
latest/trait.impl/core/clone/: trait.Clone.js
latest/trait.impl/core/cmp/: trait.PartialEq.js
latest/trait.impl/core/convert/: trait.From.js
latest/trait.impl/core/default/: trait.Default.js
latest/trait.impl/core/fmt/: trait.Debug.js
latest/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
latest/trait.impl/core/ops/drop/: trait.Drop.js
latest/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
latest/trait.impl/soa_derive/: trait.SoAIndex.js  trait.SoAIndexMut.js  trait.SoAIter.js  trait.SoAPointers.js  trait.StructOfArray.js
latest/trait.impl/soa_derive/generics/: trait.IntoSoAIter.js  trait.SoASlice.js  trait.SoASliceMut.js  trait.SoAVec.js
soa-derive/: Cargo.toml
soa-derive-internal/: Cargo.toml
soa-derive-internal/src/: generic.rs  index.rs  input.rs  iter.rs  lib.rs  names.rs  ptr.rs  refs.rs  slice.rs  structs.rs  vec.rs  zip.rs
soa-derive/src/: lib.rs
soa-derive/tests/: extreme.rs  generic.rs  ptr.rs  replace.rs  serde.rs  slice_mut.rs  soa_attr.rs  vec.rs
soa-derive/tests/particles/: mod.rs
soa_derive_example/: all.html  index.html  sidebar-items.js  struct.Particle.html  struct.ParticlePtr.html  struct.ParticlePtrMut.html  struct.ParticleRef.html  struct.ParticleRefMut.html  struct.ParticleSlice.html  struct.ParticleSliceMut.html  struct.ParticleVec.html
src/: iter.rs  lib.rs  refs.rs  slice.rs  structs.rs  vec.rs  zip.rs
src/soa_derive_example/: lib.rs.html
tests/: derive.rs  extreme.rs  generic.rs  index.rs  iter.rs  nested_soa.rs  ptr.rs  serde.rs  slice.rs  slice_mut.rs  soa_attr.rs  traits.rs  vec.rs  zip.rs
tests/particles/: mod.rs
(+6 files in other folders)
