[package]
name = "soa_derive"
version = "0.11.0"
edition = "2018"
authors = ["Guillaume Fraux <guillaume.fraux@chimie-paristech.fr>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/lumol-org/soa-derive"
homepage = "https://github.com/lumol-org/soa-derive"
documentation = "https://docs.rs/soa_derive/"
description = """
Automatic Struct of Array generation
"""

[workspace]
members = [
    "soa-derive-internal",
    "example",
]

[dependencies]
soa_derive_internal = {path = "soa-derive-internal", version = "0.11"}

[dev-dependencies]
bencher = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "soa"
harness = false
