[package]
name = "soa_derive_internal"
version = "0.10.0"
edition = "2018"
authors = ["Guillaume Fraux <guillaume.fraux@chimie-paristech.fr>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/lumol-org/soa-derive"
homepage = "https://github.com/lumol-org/soa-derive"
documentation = "https://docs.rs/soa_derive/"
description = "Internal implementation crate for soa-derive"

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
