[package]
name = "soa_derive_internal"
version = "0.13.3"
edition = "2018"
rust-version = "1.63"

authors = ["Guillaume Fraux <guillaume.fraux@epfl.ch>"]
license = "MIT/Apache-2.0"

readme = "../README.md"
description = "Internal implementation crate for soa-derive"

repository = "https://github.com/lumol-org/soa-derive"
homepage = "https://github.com/lumol-org/soa-derive"
documentation = "https://docs.rs/soa_derive/"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2", features = ["derive", "extra-traits"]}
quote = "1"
proc-macro2 = "1"
